css/DateInput.scss
$caret-top: $react-dates-spacing-vertical-picker - $react-dates-width-tooltip-arrow / 2;

.DateInput {
  // font
  float: left;
  font-weight: inherit;
  font-size: inherit;
  line-height: 34px;
  color: $react-dates-color-placeholder-text;
  margin: 0 15px 0 0;

  background: $react-dates-color-white;
  position: relative;
  display: table;
  width: 48%;
  height: 46px;
  vertical-align: middle;
  border-radius: 4px;
  border: 1px solid #d8d8d8;
}

.DateInput:last-child {
  margin-right: 0;
}

.DateInput--with-caret::before,
.DateInput--with-caret::after {
  content: "";
  display: inline-block;
  position: absolute;
  bottom: auto;
  border: $react-dates-width-tooltip-arrow / 2 solid transparent;
  border-top: 0;
  left: 22px;
  z-index: $react-dates-z-index + 2;
}

.DateInput--with-caret::before {
  top: $caret-top;
  border-bottom-color: rgba(0, 0, 0, 0.1);
}

.DateInput--with-caret::after {
  top: $caret-top + 1;
  border-bottom-color: $react-dates-color-white;
}

.DateInput--disabled {
  background: $react-dates-color-gray-lighter;
}

.DateInput__input {
  opacity: 0;
  position: absolute;
  top: 0;
  left: 0;
  border: 0;
  height: 100%;
  width: 100%;
  border-radius: 5px;

  &[readonly] {
    -moz-user-select: none;
    -webkit-user-select: none;
    -ms-user-select: none;
    user-select: none;
  }
}

.DateInput__input-icon {
  display: table-cell;
  width: 20px;
  vertical-align: middle;
  padding: 5px 10px;
  color: #909090;
}

.DateInput__display-text {
  display: table-cell;
  padding: 5px 0;
  border-top-right-radius: 5px;
  border-bottom-right-radius: 5px;
  float: left;
  width: 100%;
  height: 46px;
  white-space: nowrap;
  overflow: hidden;
  color: #000;
  border: 1px solid transparent;
}

.DateInput__display-text--has-input {
  color: #000;
}

.DateInput__display-text--focused {
  box-shadow: 1px 1px 7px transparent;
}

.DateInput__display-text--disabled {
  font-style: italic;
}

